--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "homepage": "https://github.com/adam-cowley/neode-example#readme",
   "dependencies": {
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.19.0",
     "express": "^4.15.3",
     "express-session": "^1.15.6",
+    "express-validator": "^6.3.0",
     "jade": "^1.11.0",
     "neode": "^0.2.3"
   },
