--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An example project using Neode",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "serve": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
